[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Village/ResourceMenu.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Village/ResourceCounter.gd" type="Script" id=2]
[ext_resource path="res://Kenney_Roguelike_Pack/food.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Village/waterResourceCounter.gd" type="Script" id=4]
[ext_resource path="res://Kenney_Roguelike_Pack/cool water texture.jpg" type="Texture" id=5]
[ext_resource path="res://Scripts/Village/oreResourceCounter.gd" type="Script" id=6]
[ext_resource path="res://Kenney_Roguelike_Pack/clipart2406635.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Village/cementResourceCounter.gd" type="Script" id=8]
[ext_resource path="res://Kenney_Roguelike_Pack/concrete-1646788_640.jpg" type="Texture" id=9]

[node name="ResourceMenu" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="ResourceUI" type="WindowDialog" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 81.0
margin_top = 59.0
margin_right = 905.0
margin_bottom = 542.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Resource Menu"
resizable = false

[node name="foodResourceCounter" type="Label" parent="ResourceUI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 170.0
margin_top = 60.0
margin_right = 342.0
margin_bottom = 158.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 2 )

[node name="Food" type="Sprite" parent="ResourceUI/foodResourceCounter" index="0"]

position = Vector2( -48.406, 49.6403 )
scale = Vector2( 3.70769, 3.62756 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 65, 0, 30, 30 )
_sections_unfolded = [ "Region" ]

[node name="waterResourceCounter" type="Label" parent="ResourceUI" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 175.0
margin_top = 249.0
margin_right = 347.0
margin_bottom = 316.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 4 )

[node name="Water" type="Sprite" parent="ResourceUI/waterResourceCounter" index="0"]

position = Vector2( -55.3635, 53.8973 )
scale = Vector2( 0.191774, 0.191774 )
texture = ExtResource( 5 )

[node name="oreResourceCounter" type="Label" parent="ResourceUI" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 584.0
margin_top = 66.0
margin_right = 753.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 6 )

[node name="Ore" type="Sprite" parent="ResourceUI/oreResourceCounter" index="0"]

position = Vector2( -87.4033, 33.5686 )
scale = Vector2( 0.176787, 0.154184 )
texture = ExtResource( 7 )

[node name="cementResourceCounter" type="Label" parent="ResourceUI" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 621.0
margin_top = 261.0
margin_right = 699.0
margin_bottom = 301.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 8 )

[node name="Cement" type="Sprite" parent="ResourceUI/cementResourceCounter" index="0"]

position = Vector2( -116.562, 26.6355 )
scale = Vector2( 0.179385, 0.238265 )
texture = ExtResource( 9 )

[connection signal="activate_resource_counter" from="." to="ResourceUI/foodResourceCounter" method="_on_ResourceMenu_activate_resource_counter"]

[connection signal="cementResourceCount" from="." to="ResourceUI/cementResourceCounter" method="_on_ResourceMenu_cementResourceCount"]

[connection signal="foodResourceCount" from="." to="ResourceUI/foodResourceCounter" method="_on_ResourceMenu_foodResourceCount"]

[connection signal="minus_resources" from="." to="ResourceUI/foodResourceCounter" method="_on_ResourceMenu_minus_resources"]

[connection signal="oreResourceCount" from="." to="ResourceUI/oreResourceCounter" method="_on_ResourceMenu_oreResourceCount"]

[connection signal="waterResourceCount" from="." to="ResourceUI/waterResourceCounter" method="_on_ResourceMenu_waterResourceCount"]


